# canary

./: .gitignore  CLAUDE.md  PLAN.md  README.md  REQUIREMENTS.md
Canary/: CanaryApp.swift  ContentView.swift  Item.swift
Canary.xcodeproj/: project.pbxproj
Canary.xcodeproj/xcuserdata/shawn.xcuserdatad/xcschemes/: xcschememanagement.plist
CanaryUITests/: CanaryUITests.swift  CanaryUITestsLaunchTests.swift
Keyboard/: AlternatesPopoutView.swift  AutocorrectPopoutView.swift  AutocorrectService.swift  ColorTheme.swift  DeviceLayout.swift  EditingBarView.swift  FrequencyService.swift  HapticFeedback.swift  Key.swift  KeyPopoutView.swift  KeyType.swift  KeyboardLayout.swift  KeyboardPreferences.swift  KeyboardTouchView.swift  KeyboardViewController.swift  MultiTouchKeyboardGestureRecognizer.swift  PopoutView.swift  PredictionService.swift  PredictionView.swift  SFSymbolRenderer.swift  SuggestionService.swift  SuggestionView.swift  TypeaheadService.swift  TypoService.swift
corpus/: legitimate_words.txt  word_frequencies.txt  words.txt
firmware/: Cargo.toml
firmware/src/: main.rs
iOS/: .gitignore  CLAUDE.md  REQUIREMENTS.md  swiping.md
iOS/Canary.xcodeproj/xcuserdata/shawn.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/CanaryTests/: CanaryTests.swift
iOS/Keyboard/: AlternatesPopoutView.swift  ColorTheme.swift  HapticFeedback.swift  Key.swift  KeyPopoutView.swift  KeyboardLayout.swift  KeyboardTouchView.swift  SuggestionService.swift  TypeaheadService.swift
iOS/corpus/: hidden_words.txt  legitimate_words.txt  words.txt
